Revert "Inline gap fix"
This reverts commit 034602a3f1d2331ed710b675414386540a3c1db0.

--- a/mixins/_vertical-center-child.scss
+++ b/mixins/_vertical-center-child.scss
@@ -1,7 +1,7 @@
-@mixin vertical-center-child($size: 14px) {
+@mixin vertical-center-child() {
   // https://css-tricks.com/centering-in-the-unknown/
+  //white-space: nowrap;
 
-  font-size: 0;
   &:before {
     content: '';
     display: inline-block;
@@ -12,6 +12,5 @@
   & > * {
     display: inline-block;
     vertical-align: middle;
-    font-size: $size;
   }
 }
